# rag

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/: rag_agent.py
app/: streamlit_app.py
src/config/: legal_guardrails.py  llm.yaml  prompts.py  settings.py
src/core/: chunker.py  intent_classifier.py  llm_handler.py  reranker.py  retriever.py
src/core/llm/: base.py  factory.py  gemini.py  groq.py  local.py
src/indexing/: keyword_index.py  vector_store.py
src/ingestion/: build_indices_pdf.py  load_to_database.py  pdf_chunker.py  pdf_parser.py  simple_pdf_loader.py  validators.py
src/orchestration/: workflow.py
src/validation/: answer_validator.py
tools/: search_tools.py
utils/: llm_config.py  vector_store.py
