[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==0.4.22",
    "langchain==0.1.0",
    "langchain-community==0.0.10",
    "langchain-google-genai==0.0.6",
    "langgraph==0.0.20",
    "pypdf==3.17.4",
    "python-dotenv==1.0.0",
    "streamlit==1.29.0",
    "tiktoken==0.5.2",
]
